--- a/package.xml
+++ b/package.xml
@@ -3,14 +3,16 @@
 <package format="3">
   <name>fastdds_monitor</name>
   <!-->There must be a release. Update version accordingly<-->
-  <version>1.5.0</version>
+  <version>2.0.0</version>
   <description>
     Qt application written in C++ that plot the data from the Fast DDS Statistics Backend.
   </description>
   <!-->Update maintainer information<-->
   <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
-  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
   <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
+  <maintainer email="jesuspoderoso@eprosima.com">Jesús Poderoso</maintainer>
+  <maintainer email="irenebandera@eprosima.com">Irene Bandera</maintainer>
+  <maintainer email="jesusperez@eprosima.com">Jesús Pérez</maintainer>
   <license file="LICENSE">GNU general public license</license>
 
   <url type="website">https://www.eprosima.com/</url>
