--- a/test/blackbox/static_mock/CMakeLists.txt
+++ b/test/blackbox/static_mock/CMakeLists.txt
@@ -46,7 +46,7 @@ target_include_directories(BlackboxStaticMockTest PRIVATE
     $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include/${PROJECT_NAME}>)
 
 target_link_libraries(BlackboxStaticMockTest
-    fastrtps
+    fastdds
     fastcdr
     ${QT5_LIBRARY_LINKS}
     fastdds_statistics_backend
