--- a/test/unittest/utils/CMakeLists.txt
+++ b/test/unittest/utils/CMakeLists.txt
@@ -89,7 +89,7 @@ target_include_directories(BackendUtilsTest PRIVATE
     ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(BackendUtilsTest PUBLIC
-    fastrtps
+    fastdds
     fastcdr
     fastdds_statistics_backend
     ${QT5_LIBRARY_LINKS}
