--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -78,10 +78,17 @@ jobs:
         with:
           packages: doxygen graphviz imagemagick python3 python3-pip python3-sphinxcontrib.spelling python3-venv software-properties-common wget curl grep
 
-      - name: Install Python packages
+      - name: Install Ubuntu Python packages
+        if: ${{ runner.os == 'Linux' }}
         uses: eProsima/eProsima-CI/multiplatform/install_python_packages@v0
         with:
-          requirements_file_name: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/requirements.txt
+          packages: sphinx==7.3.6 doc8==0.10.1 sphinx_rtd_theme==2.0.0 sphinxcontrib.spelling==8.0.0 sphinxcontrib-imagehelper==1.1.1 GitPython
+
+      - name: Install Windows Python packages
+        if: ${{ runner.os == 'Windows' }}
+        uses: eProsima/eProsima-CI/multiplatform/install_python_packages@v0
+        with:
+          packages: sphinx doc8 sphinx_rtd_theme sphinxcontrib.spelling sphinxcontrib-imagehelper GitPython
 
       - name: Install Qt
         uses: eProsima/eProsima-CI/external/install_qt@v0
@@ -107,7 +114,7 @@ jobs:
         with:
           packages_names: fastdds_monitor
           cmake_args: -DCMAKE_BUILD_TYPE=${{ matrix.cmake_build_type }}
-          colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os.version }}/colcon.meta
+          colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os }}/colcon.meta
           workspace: ${{ github.workspace }}
 
       - name: Upload artifact
@@ -151,7 +158,7 @@ jobs:
       - name: Install Python packages
         uses: eProsima/eProsima-CI/multiplatform/install_python_packages@v0
         with:
-          requirements_file_name: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/requirements.txt
+          packages: sphinx==7.3.6 doc8==0.10.1 sphinx_rtd_theme==2.0.0 sphinxcontrib.spelling==8.0.0 sphinxcontrib-imagehelper==1.1.1 GitPython
 
       - name: Install Qt
         uses: eProsima/eProsima-CI/external/install_qt@v0
