--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -49,7 +49,7 @@ jobs:
             aarch: 'gcc_64'
           - version: windows-2019
             aarch: 'win64_msvc2019_64'
-          - version: windows-2021
+          - version: windows-2022
             aarch: 'win64_msvc2019_64'
 
     steps:
@@ -113,7 +113,8 @@ jobs:
           QT_QPA_PLATFORM: 'offscreen'
         with:
           packages_names: fastdds_monitor
-          cmake_args: -DCMAKE_BUILD_TYPE=${{ matrix.cmake_build_type }}
+          cmake_build_type: ${{ matrix.cmake_build_type }}
+          cmake_args: '-DTHIRDPARTY=ON'
           colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os }}/colcon.meta
           workspace: ${{ github.workspace }}
 
