--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -106,7 +106,6 @@ jobs:
           @(ls -Path C:\Windows\System32\* -Include libssl-*.dll; ls -Path C:\Windows\SysWOW64\* -Include libssl-*.dll)
           | rm -ErrorAction SilentlyContinue
 
-
       - name: Compile and run tests
         uses: eProsima/eProsima-CI/multiplatform/colcon_build_test@v0
         env:
@@ -114,7 +113,7 @@ jobs:
         with:
           packages_names: fastdds_monitor
           cmake_build_type: ${{ matrix.cmake_build_type }}
-          cmake_args: '-DTHIRDPARTY=ON'
+          cmake_args: '-DTHIRDPARTY=ON -DBUILD_DOCUMENTATION=OFF -DBUILD_DOCUMENTATION_TESTS=OFF'
           colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os }}/colcon.meta
           workspace: ${{ github.workspace }}
 
@@ -124,6 +123,68 @@ jobs:
         with:
           name: ${{ matrix.os.version }}_output
           path: ${{ github.workspace }}/build/fastdds_monitor
+
+
+#####################################################################
+# DOCUMENTATION
+
+#####################################################################
+# TEST
+
+  documentation:
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        cmake_build_type:
+          - Release
+          - Debug
+
+    steps:
+      - name: Sync repository
+        uses: eProsima/eProsima-CI/external/checkout@v0
+        with:
+          path: src/fastdds_monitor
+          ref: ${{ inputs.ref }}
+
+      - name: Install Fast DDS dependencies
+        uses: eProsima/eProsima-CI/multiplatform/install_fastdds_dependencies@v0
+        with:
+          cmake_build_type: ${{ matrix.cmake_build_type }}
+
+      - name: Fetch Fast DDS Monitor repositories
+        uses: eProsima/eProsima-CI/multiplatform/vcs_import@v0
+        with:
+          vcs_repos_file:  ${{ github.workspace }}//src/fastdds_monitor/fastdds_monitor.repos
+          destination_workspace: ${{ github.workspace }}/src
+          skip_existing: 'true'
+
+      - name: Install apt packages
+        uses: eProsima/eProsima-CI/ubuntu/install_apt_packages@v0
+        with:
+          packages: doxygen graphviz imagemagick python3 python3-pip python3-sphinxcontrib.spelling python3-venv software-properties-common wget curl grep
+
+      - name: Install Python packages
+        uses: eProsima/eProsima-CI/multiplatform/install_python_packages@v0
+        with:
+          packages: sphinx==7.3.6 doc8==0.10.1 sphinx_rtd_theme==2.0.0 sphinxcontrib.spelling==8.0.0 sphinxcontrib-imagehelper==1.1.1 GitPython
+
+      - name: Install Qt
+        uses: eProsima/eProsima-CI/external/install_qt@v0
+        with:
+          dir: '${{ github.workspace }}/qt_installation/'
+          modules: 'qtcharts'
+          setup-python: 'false'
+
+      - name: Compile and run tests
+        uses: eProsima/eProsima-CI/multiplatform/colcon_build_test@v0
+        with:
+          packages_names: fastdds_monitor
+          cmake_build_type: ${{ matrix.cmake_build_type }}
+          cmake_args: '-DTHIRDPARTY=ON -DBUILD_DOCUMENTATION=ON -DBUILD_DOCUMENTATION_TESTS=ON'
+          colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/Linux/colcon.meta
+          workspace: ${{ github.workspace }}
+
 
 #####################################################################
 # CLANG
