--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -116,6 +116,7 @@ jobs:
           cmake_args: '-DTHIRDPARTY=ON -DBUILD_DOCUMENTATION=OFF -DBUILD_DOCUMENTATION_TESTS=OFF'
           colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/${{ runner.os }}/colcon.meta
           workspace: ${{ github.workspace }}
+          test_report_artifact: 'fastdds_monitor_${{ matrix.os.version }}_${{ matrix.cmake_build_type }}'
 
       - name: Upload artifact
         uses: eProsima/eProsima-CI/external/upload-artifact@v0
@@ -184,6 +185,7 @@ jobs:
           cmake_args: '-DTHIRDPARTY=ON -DBUILD_DOCUMENTATION=ON -DBUILD_DOCUMENTATION_TESTS=ON'
           colcon_meta_file: ${{ github.workspace }}/src/fastdds_monitor/.github/workflows/configurations/Linux/colcon.meta
           workspace: ${{ github.workspace }}
+          test_report_artifact: 'fastdds_monitor_documentation'
 
 
 #####################################################################
