--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -161,7 +161,7 @@ jobs:
       - name: Install Python packages
         uses: eProsima/eProsima-CI/multiplatform/install_python_packages@v0
         with:
-          packages: sphinx==7.3.6 doc8==0.10.1 sphinx_rtd_theme==2.0.0 sphinxcontrib.spelling==8.0.0 sphinxcontrib-imagehelper==1.1.1 GitPython
+          requirements_file_name: ${{ github.workspace }}/src/fastdds_monitor/docs/requirements.txt
 
       - name: Install Qt
         uses: eProsima/eProsima-CI/external/install_qt@v0
